# learn_cuda-triton

./: CMakeLists.txt  README.md  readme.md
GEMM/: .gitignore  CMakeLists.txt
GEMM/include/: gemm_kernels.cuh
GEMM/src/: bench_gemm.cu  prepare_data.cpp
include/: gemm_kernels.cuh  gemm_utils.hpp
learn_triton/: main.py  pyproject.toml
pmpp/chapter2/: chapter2 学书总结+写的时候遇到的错误.md
pmpp/chapter2/code/: array_add  array_add.cu  hello  hello.cu
pmpp/chapter3/: 读书总结.md
pmpp/chapter3/code/: grey_scale.cu  mmm_matmul.cu  mnk_matmul.cu
pmpp/chapter3/test/: one_thread_column.cu  one_thread_row.cu
pmpp/chapter4/: test.md  读书总结.md
pmpp/chapter5/: roofline.md  tiled_matmul.cu  读书总结.md
src/: bench_gemm.cu
